fix: stretch height of cards

--- a/site/assets/styles/main.css
+++ b/site/assets/styles/main.css
@@ -114,16 +114,15 @@ main {
     display: none;
 }
 .card {
-    display: flex;
     flex-direction: column;
     background-color: white;
     transition: 0.3s;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     position: relative;
-    height: 100%;
 }
 
 .item {
+    display: flex;
     margin: 0 15px 50px;
     width: calc(100%/3 - 30px);
     max-width: 540px;
